--- a/app/src/main/res/layout-land/activity_edit_profile.xml
+++ b/app/src/main/res/layout-land/activity_edit_profile.xml
@@ -28,20 +28,19 @@
                 android:id="@+id/imageViewAvatar"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginLeft="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="64dp"
                 app:srcCompat="@mipmap/ic_launcher" />
 
             <EditText
                 android:id="@+id/editTextName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/buttonChangeAvatar"
+                android:layout_toEndOf="@+id/imageViewAvatar"
                 android:layout_alignTop="@+id/imageViewAvatar"
+                android:layout_marginStart="32dp"
                 android:ems="10"
                 android:hint="Name"
                 android:inputType="textPersonName"
@@ -73,9 +72,9 @@
                 android:id="@+id/buttonChangeAvatar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/buttonSaveProfile"
-                android:layout_marginStart="41dp"
-                android:layout_toEndOf="@+id/imageViewAvatar"
+                android:layout_below="@+id/editTextDescription"
+                android:layout_marginTop="32dp"
+                android:layout_alignStart="@+id/editTextDescription"
                 android:text="Change Avatar" />
 
         </RelativeLayout>
