--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -29,15 +29,16 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_alignParentTop="true"
-                android:layout_alignStart="@+id/editTextName"
-                android:layout_marginTop="27dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="64dp"
                 app:srcCompat="@mipmap/ic_launcher" />
 
             <EditText
                 android:id="@+id/editTextName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/buttonChangeAvatar"
+                android:layout_alignStart="@+id/imageViewAvatar"
                 android:layout_centerVertical="true"
                 android:ems="10"
                 android:hint="Name"
@@ -48,7 +49,6 @@
                 android:id="@+id/editTextDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/editTextName"
                 android:layout_alignStart="@+id/editTextName"
                 android:layout_below="@+id/editTextName"
                 android:layout_marginTop="26dp"
@@ -63,8 +63,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/buttonChangeAvatar"
                 android:layout_alignBottom="@+id/buttonChangeAvatar"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="54dp"
+                android:layout_toEndOf="@+id/buttonChangeAvatar"
+                android:layout_marginStart="16dp"
                 android:text="Save Changes" />
 
             <Button
@@ -72,9 +72,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/editTextDescription"
-                android:layout_marginEnd="18dp"
+                android:layout_alignStart="@+id/editTextDescription"
                 android:layout_marginTop="32dp"
-                android:layout_toStartOf="@+id/buttonSaveProfile"
                 android:text="Change Avatar" />
 
         </RelativeLayout>
