--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -29,37 +29,58 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_alignParentTop="true"
-                android:layout_alignStart="@+id/textViewName"
-                android:layout_marginTop="16dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="64dp"
                 app:srcCompat="@mipmap/ic_launcher" />
 
             <TextView
                 android:id="@+id/textViewName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
+                android:layout_alignStart="@+id/imageViewAvatar"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="28dp"
                 android:text="Name"
                 android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/textViewDateLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/textViewName"
+                android:layout_below="@+id/textViewName"
+                android:layout_marginTop="16dp"
+                android:text="Date Started"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textViewDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView"
-                android:layout_alignBottom="@+id/textView"
+                android:layout_alignBaseline="@+id/textViewDateLabel"
+                android:layout_alignBottom="@+id/textViewDateLabel"
                 android:layout_marginStart="13dp"
-                android:layout_toEndOf="@+id/textView"
+                android:layout_toEndOf="@+id/textViewDateLabel"
                 android:text="Date"
                 android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textViewDescriptionLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/textViewDateLabel"
+                android:layout_below="@+id/textViewDateLabel"
+                android:layout_marginTop="11dp"
+                android:text="Description"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textViewDescription"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/textView2"
-                android:layout_below="@+id/textView2"
+                android:layout_alignStart="@+id/textViewDescriptionLabel"
+                android:layout_below="@+id/textViewDescriptionLabel"
                 android:layout_marginTop="12dp"
                 android:text="Description Text" />
 
@@ -67,32 +88,11 @@
                 android:id="@+id/buttonEditProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="46dp"
-                android:layout_marginEnd="28dp"
+                android:layout_below="@+id/textViewDescription"
+                android:layout_alignStart="@+id/textViewDescription"
+                android:layout_marginTop="32dp"
                 android:text="Edit Profile" />
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/textViewName"
-                android:layout_below="@+id/textViewName"
-                android:layout_marginTop="13dp"
-                android:text="Date Started"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/textView"
-                android:layout_below="@+id/textView"
-                android:layout_marginTop="11dp"
-                android:text="Description"
-                android:textStyle="bold" />
         </RelativeLayout>
 
     </android.support.design.widget.AppBarLayout>
